--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@ $charcoal: #ccc;
 
 body {
   background-color: $charcoal;
+  margin: 0;
 }
 
 .flash-success,
@@ -40,13 +41,16 @@ body {
   margin: 15% auto 0;
   max-width: 600px;
 
-  h3,
-  input {
-    margin-bottom: 5%;
-  }
+
 
   button {
     align-self: flex-end;
     max-width: 200px;
   }
+}
+
+.fashion {
+  margin-left: 80%;
+  position: fixed;
+  padding: 50px;
 }
