--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@ $error: #f08181;
 $charcoal: #ccc;
 
 body {
-  background-color: $charcoal;
+  background-color: #444;
   margin: 0;
 }
 
@@ -49,8 +49,12 @@ body {
   }
 }
 
-.fashion {
-  margin-left: 80%;
+.fashion-alert {
+  max-width: 30%;
   position: fixed;
-  padding: 50px;
+  z-index: 500;
+  padding-top: 20px;
+  margin-left: 70%;
+  margin-bottom: 20%;
+border-radius: 5px;
 }
