--- a/src/auth/components/fancyform.scss
+++ b/src/auth/components/fancyform.scss
@@ -6,7 +6,7 @@
 
 .app {
   height: 500px;
-  width: 281px;
+  width: 40%;
   margin: auto;
   position: absolute;
   top: 0; bottom: 0;
@@ -18,6 +18,7 @@
 .content {
   background: #5E2E91 url('https://cbwconline.com/IMG/Codepen/Mountains.svg') center 20% no-repeat;
   background-size: 150px;
+  border-radius: 8px;
   height: 100%;
   width: 100%;
   transition: .3s .2s;
