Refactor CSS and redid site styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
+
 $success: #c7f282;
 $warning: #f1e681;
 $error: #f08181;
 $charcoal: #ccc;
 
 body {
-  background-color: #444;
+  background-color: #fff;
   margin: 0;
 }
 
