--- a/src/auth/components/fancyform.scss
+++ b/src/auth/components/fancyform.scss
@@ -5,26 +5,28 @@
 }
 
 .app {
-  height: 500px;
+  height: 80%;
   width: 40%;
   margin: auto;
+  border-radius: 5px;
   position: absolute;
+  margin-top: 7%;
   top: 0; bottom: 0;
   left: 0; right: 0;
-  overflow: hidden;
   box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
 }
 
 .content {
-  background: #5E2E91 url('https://cbwconline.com/IMG/Codepen/Mountains.svg') center 20% no-repeat;
+  background: #AAAAAA url('https://cbwconline.com/IMG/Codepen/Mountains.svg') center 20% no-repeat;
   background-size: 150px;
   border-radius: 8px;
   height: 100%;
   width: 100%;
   transition: .3s .2s;
   &.background {
-    background: #5E2E91 url('https://cbwconline.com/IMG/Codepen/Mountains.svg') center 15% no-repeat;
+    background: #AAAAAA url('https://cbwconline.com/IMG/Codepen/Mountains.svg') center 15% no-repeat;
     background-size: 75px;
+    background-color: #001f3f;
   }
 }
 
@@ -43,7 +45,7 @@
 
   &.expanded {
     height: 250px;
-    width: 90%;
+    width: 50%;
     border-radius: 5px;
     top: 35%;
   }
@@ -66,7 +68,7 @@
   position: relative;
   text-align: center;
   transition: .3s .6s;
-
+  border-radius: 5px;
   &.hidden {
     visibility: hidden;
     opacity: 0;
@@ -89,13 +91,12 @@
 
 .sign-up {
   width: 100%;
-  height: 22px;
   padding: 20px 0;
   margin: auto;
   position: absolute;
   top: 0;
-  bottom:0;
-  color: #5E2E91;
+  bottom: 10;
+  color: #AAAAAA;
   font: 500 20px Roboto;
   text-align: center;
   cursor: pointer;
@@ -144,7 +145,7 @@
 }
 
 .header {
-  background: #5E2E91 url("https://cbwconline.com/IMG/Codepen/Menu.svg") 8% 50% no-repeat;
+  background: #AAAAAA url("https://cbwconline.com/IMG/Codepen/Menu.svg") 8% 50% no-repeat;
   width: 100%;
   height: 56px;
   position: absolute;
@@ -164,7 +165,7 @@
   position: absolute;
   top: 400px;
   bottom:0;
-  color: #5E2E91;
+  color: #AAAAAA;
   font: 500 20px Roboto;
   text-align: center;
   cursor: pointer;
