--- a/src/header/CssBar.css
+++ b/src/header/CssBar.css
@@ -8,7 +8,7 @@ body {
     display: block;
     width: 100%;
     max-width: 100%;
-    box-shadow: none;
+    box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
     background-color: #AAAAAA;
     height: 70px!important;
     overflow: hidden;
